2009-02-28  Hans Boehm <Hans.Boehm@hp.com> (Really Petr Krajca)
	* configure.ac: Enable thread-local allocation for sparc-linux.
	* configure: Regenerate.

2009-02-28  Hans Boehm <Hans.Boehm@hp.com> (Really Ivan Maidansky)
	* alloc.c (GC_try_to_collect): Remove duplicate initialization
	check.
	* malloc.c (GC_generic_malloc): Remove lw to eliminate single-
	threaded warnings.
	* mallocx.c (GC_generic_malloc_ignore_off_page): Ditto.

2009-02-28  Hans Boehm <Hans.Boehm@hp.com> (Mostly Ivan Maidansky)
	* allchblk.c, backgraph.c, dbg_mlc.c, dyn_load.c,
	finalize.c, include/private/gc_pmark.h, malloc.c, mark.c,
	os_dep.c, pthread_stop_world.c, pthread_support.c, reclaim.c,
	thread_local_alloc.c.
	* misc.c: Refine comment.

2009-02-28  Hans Boehm <Hans.Boehm@hp.com>
	* os_dep.c: Define GC_GWW_BUF_LEN more intelligently.  Add FIXME
	comment.

2009-02-28  Hans Boehm <Hans.Boehm@hp.com> (With input from Ivan Maidansky)
	* win32_threads.c (GC_push_stack_for): Yet another attempt
	at the stack_min finding logic.  Try to clean up the existing code
	while minimizing VirtualQuery calls.
	(GC_win32_start_inner): Register thread before GC_printf.
	Produce more output with DEBUG_THREADS.
	*include/gc.h: Update obsolete comments.

2009-02-24  Hans Boehm <Hans.Boehm@hp.com> (Really Ivan Maidansky)
	* tests/test.c:
	(gcj_class_struct2): Use cast instead of l suffix.
	Cast GetLastError to int in various places.
	Avoid unused result warning from incr/decr macros.
	Add cast for fake_gcj_mark_proc.
	Cast GC_gc_no to unsigned in printf.

2009-02-24  Hans Boehm <Hans.Boehm@hp.com> (Really Ivan Maidansky)
	* include/gc.h: Fix two typos in comments.

2009-02-24  Hans Boehm <Hans.Boehm@hp.com> (Really Ivan Maidansky)
	* finalize.c: Fix typo in comment.

2008-12-03  Hans Boehm <Hans.Boehm@hp.com> (Really Ivan Maidansky)
	* blacklst.c (GC_print_source_pointer): Don't call GC_print_heap_obj
	with lock.

2008-12-01  Hans Boehm <Hans.Boehm@hp.com>